--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^3.0.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.29.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
